[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Schr√∂dinger.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/HabanoST.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/menu/pause/PausePopup.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[node name="PausePopup" type="Popup"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -148.0
margin_right = 264.0
margin_bottom = 164.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.5
margin_right = 70.5
margin_bottom = 82.0
custom_fonts/font = SubResource( 1 )
text = "Pausa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Advice" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 96.0
margin_right = 253.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
text = "	AVISO: Si abandonas un minijuego ya iniciado
	con apuesta, perderas el dinero apostado."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 36.0
margin_right = 143.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Continuar minijuego"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -64.0
margin_right = 110.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 4 )
text = "Irse a la calle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitTimer" type="Timer" parent="."]
[connection signal="pressed" from="ColorRect/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="ColorRect/Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_ExitTimer_timeout"]
